--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 
                     <div class="button-container", style="text-align: center;">
-                        <a href="https://arxiv.org/abs/[YourPaperID]" class="button paper-link" target="_blank">
+                        <a href="https://arxiv.org/abs/2505.23656" class="button paper-link" target="_blank">
                             <span class="icon is-small">
                                 <i class="ai ai-arxiv"></i>
                             </span>
@@ -1452,11 +1452,11 @@
     <d-appendix>
         <h3>BibTeX</h3>
         <p class="bibtex">
-@article{videorepa,
+@article{zhang2025videorepa,
   title={VideoREPA: Learning Physics for Video Generation through Relational Alignment with Foundation Models},
   author={Zhang, Xiangdong and Liao, Jiaqi and Zhang, Shaofeng and Meng, Fanqing and Wan, Xiangpeng and Yan, Junchi and Cheng, Yu},
-  journal={arXiv preprint},
-  year={2024}
+  journal={arXiv preprint arXiv:2505.23656},
+  year={2025}
 }
         </p>
 
